# internal/application/api/response/shopping_list.go
@@ -1,0 +1,6 @@
+package response
+
+type ShoppingListResponse struct {
+	Id       string            `json:"id"`
+	Products []ProductResponse `json:"products"`
+}
